Se creó una nueva rama para cambiar el broker de mensajes.
Co-authored-by: acai-bjca <amalia.alfonso@mail.escuelaing.edu.co>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-server.port=8081
+server.port = 8081
 
 broker.relayHost = 192.168.56.101
 broker.relayPort = 61613
+
+broker.cloudamqp.relayHost2 = clam.rmq.cloudamqp.com
+broker.cloudamqp.user = ibclalon
+broker.cloudamqp.password = ApYMPWpap35QmcBEstG-u6dxeOa_gfJh
